[tool.poetry]
name = "optical_flow_raft"
version = "0.1.0"
description = ""
authors = ["Danielle Ben Bashat <daniellebenba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
# macOS-specific TensorFlow packages
tensorflow-macos = { version = "2.12.0", markers = "sys_platform == 'darwin'" }

# Linux TensorFlow package
tensorflow = { version = "2.12.0", markers = "sys_platform == 'linux'" }

google-cloud-storage = "^2.10.0"
onnxruntime = "1.14.1"
code-loader = "^1.0.91"
scikit-learn = "^1.0.3"
opencv-python = "4.8.1.78"
numpy = "1.23.0"
matplotlib = "3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_test: check_integration"
custom_test = "leap_custom_test: check_custom_integration"

